manifesto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: tech-challenge2
spec:
  rules:
    - host: microservices.local #colocar dominio depois
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /flags
            pathType: Prefix
            backend:
              service:
                name: flag-service
                port:
                  number: 80
          - path: /targeting
            pathType: Prefix
            backend:
              service:
                name: targeting-service
                port:
                  number: 80
          - path: /evaluation
            pathType: Prefix
            backend:
              service:
                name: evaluation-service
                port:
                  number: 80
          - path: /analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 80
